--- a/web/nav.xhtml
+++ b/web/nav.xhtml
@@ -7,16 +7,16 @@
         <ui:composition>
             <ul>
                 <li>
-                    <h:link value='Home' outcome='index'/>
+                    <h:link value='Home' outcome='/index'/>
                 </li>
                 <li>
-                    <h:link value='Services' outcome='services'/>
+                    <h:link value='Services' outcome='/services'/>
                 </li>
                 <li>
-                    <h:link value='About Us' outcome='about'/>
+                    <h:link value='About Us' outcome='/about'/>
                 </li>
                 <li>
-                    <h:link value='Contact Us' outcome='contact'/>
+                    <h:link value='Contact Us' outcome='/contact'/>
                 </li>
             </ul>
         </ui:composition>
