--- a/web/information/information.xhtml
+++ b/web/information/information.xhtml
@@ -4,12 +4,13 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f5="http://xmlns.jcp.org/jsf/passthrough"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title></title>
     </h:head>
-    <h:body>
-        <ui:composition template="template/layout.xhtml">     
+    <body>
+        <ui:composition template="/template/layout.xhtml">     
             <ui:param name="wrapperWidth" value="1055px"/>
             <ui:param name="search" value="true"/>
             <ui:param name="leftWidth" value="200px"/>
@@ -20,8 +21,15 @@
             </ui:define>
 
             <ui:define name="login">
-                You have successfully logged into your account!
+                <!-- Takes input for username and password, redirects to either a success page or register page
+                     depending on the outcome of the findAll() method -->
+                <h:form id="loginFormID">
+                    <h:inputText styleClass="inputs" value="#{userBean.user}" f5:type="email" f5:placeholder="E-mail"/>
+                    <h:inputSecret styleClass="inputs" value="#{userBean.pass}" f5:placeholder="Password:"/>
+                    <h:commandButton styleClass="lbutton" value="Log In" action="#{userBean.findALL()}"/>
+                </h:form>
             </ui:define>
+            <!-- Takes input for search term, searches inventory for that term using the searchInventory() method -->
             <ui:define name="search">
                 <h:form>
                     <h:inputText styleClass="inputs" value="#{functionBean.search}" f5:type="search" f5:placeholder="Search"/>
@@ -36,7 +44,7 @@
             </ui:define>
 
             <ui:define name="menu">
-                <ui:include src="nav.xhtml"/>
+                Menu disabled
             </ui:define>
 
             <ui:define name="left">
@@ -46,6 +54,8 @@
                 <br/>
                 <br/>
                 <br/>
+                <!-- Uses command buttons to trigger a tiered menu on click, using the model and menu
+                     items created in the Product Bean -->
                 <div style="width:200px;padding-bottom: 5px;">
                     <h:form>
                         <p:growl id="messages" showDetail="true"/>
@@ -72,21 +82,29 @@
                 </div>
                 <br/><br/>
             </ui:define>
-
-
-            <ui:define name="content">               
-                <div style="text-align: center;margin-top: 170px;margin-bottom: 170px;">
-                    <p>Do you want the fastest processors at the lowest prices? Look no further!</p>
-                </div>
-            </ui:define>
-
+          <ui:define name="content">
+              <h3>First page in the information flow</h3>
+        <br>Flow Id: #{facesContext.application.flowHandler.currentFlow.id}</br>
+        
+        <br>Enter your personal information and most recent credentials:</br>
+        <h:form prependId="false">
+            First Name: <h:inputText value="#{informationBean.firstName}"/><br/>
+            Last Name: <h:inputText value="#{informationBean.lastName}"/><br/>
+            Address: <h:inputText value="#{informationBean.address}"/><br/>
+            City: <h:inputText value="#{informationBean.city}"/><br/>
+            State: <h:inputText value="#{informationBean.state}"/><br/>
+            Zip: <h:inputText value="#{informationBean.zip}"/><br/>
+            Phone Number: <h:inputText value="#{informationBean.phone}"/><br/><br/>
+            <h:commandButton value="Register Personal Information" 
+                             action="#{informationBean.registrationAction()}"/>           
+            <h:commandButton value="Back (exit flow)" action="taskFlowReturnIndex"/>  
+        </h:form>
+          </ui:define>
 
             <ui:define name='bottom'>
                 SLCC ASDV 2020. All Rights Reserved.
             </ui:define>
         </ui:composition>
         <br />
-    </h:body>
+    </body>
 </html>
-
-
