--- a/web/services.xhtml
+++ b/web/services.xhtml
@@ -26,6 +26,7 @@
                 <h:form>
                     <h:inputText styleClass="inputs" value="#{functionBean.search}" f5:type="search" f5:placeholder="Search"/>
                     <h:commandButton styleClass="lbutton" value="Go" action="#{functionBean.searchInventory()}"/>
+                    <h:commandButton styleClass="lbutton" value="Show Cart" action="#{functionBean.showCart()}"/>
                 </h:form>
             </ui:define>
 
@@ -49,23 +50,23 @@
                     <h:form>
                         <p:growl id="messages" showDetail="true"/>
                         <h:panelGrid columns="1" style="margin: 0 auto;">
-                        <p:commandButton
-                     id="computer-btn" type="button" value="Computers"/>
-                        <br/>
-                        <p:commandButton
-                     id="phone-btn" type="button" value="Phones"/>
+                            <p:commandButton
+                                id="computer-btn" type="button" value="Computers"/>
+                            <br/>
+                            <p:commandButton
+                                id="phone-btn" type="button" value="Phones"/>
                         </h:panelGrid>
                         <p:tieredMenu 
-                  overlay="true" 
-                  trigger="computer-btn" 
-                  my="left top" 
-                  at="left bottom" style="width:200px; border: white; padding: 0px" model="#{productsBean.model}">
+                            overlay="true" 
+                            trigger="computer-btn" 
+                            my="left top" 
+                            at="left bottom" style="width:200px; border: white; padding: 0px" model="#{productsBean.model}">
                         </p:tieredMenu>
                         <p:tieredMenu 
-                  overlay="true" 
-                  trigger="phone-btn" 
-                  my="left top" 
-                  at="left bottom" style="width:200px; border: white; padding: 0px" model="#{productsBean.model2}">
+                            overlay="true" 
+                            trigger="phone-btn" 
+                            my="left top" 
+                            at="left bottom" style="width:200px; border: white; padding: 0px" model="#{productsBean.model2}">
                         </p:tieredMenu>
                     </h:form>
                 </div>
@@ -74,7 +75,7 @@
 
             <ui:define name="content">               
                 <div style="text-align: center;margin-top: 170px;margin-bottom: 170px;">
-                        <p>We sell desktops, laptops, and smartphones for all of your technology needs!</p><br/>
+                    <p>We sell desktops, laptops, and smartphones for all of your technology needs!</p><br/>
                 </div>
             </ui:define>
 
